--- a/app/views/layouts/just_admin.html.erb
+++ b/app/views/layouts/just_admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : '暗夜小站 | 数据中心' %></title>
+  <title><%= content_for?(:title) ? yield(:title) : '数据中心 | 轩' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <%= stylesheet_link_tag 'LTE_admin/lte_admin', media: 'all', 'data-turbolinks-track' => true %>
@@ -21,14 +21,14 @@
   </style>
 </head>
 
-<body id="body-skin" class="<% if session[:admin].present? %>sidebar-mini wysihtml5-supported skin-black-light<% else %><%= user_style current_user %><% end %>">
+<body id="body-skin" class="<% if current_admin %>sidebar-mini wysihtml5-supported skin-black-light<% else %><%= user_style current_user %><% end %>">
 <div class="wrapper">
 
   <header class="main-header">
     <!-- Logo -->
     <a href="/" class="logo">
-      <span class="logo-mini"><b>暗</b>夜</span>
-      <span class="logo-lg"><b>暗夜小站</b>视频</span>
+      <span class="logo-mini"><b>轩</b></span>
+      <span class="logo-lg"><b>轩</b>数据管理</span>
     </a>
     <nav class="navbar navbar-static-top" role="navigation">
       <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
@@ -49,32 +49,15 @@
     <section class="sidebar">
       <div class="user-panel">
         <div class="pull-left image">
-          <% if session[:admin].present? %>
-              <img src="<%= image_url('face.png') %>" class="img-circle" alt="User Image" />
-          <% else %>
-              <img src="<%= user_avatar current_user %>" class="img-circle" alt="User Image" />
-          <% end %>
-
+          <img src="<%= image_url('toutu/face.png') %>" class="img-circle" alt="User Image" />
         </div>
         <div class="pull-left info">
-          <% if session[:admin].present? %>
-              <p>超级管理员</p>
-          <% else %>
-              <p>管理员</p>
-          <% end %>
-
+          <p>超级管理员</p>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
       <!-- 搜索 -->
-      <form action="<%= admin_search_path %>" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="query" value="<%= params[:query] %>" class="form-control" placeholder="Search..."/>
-              <span class="input-group-btn">
-                <button type='submit' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
-              </span>
-        </div>
-      </form>
+      <%= render :partial => 'layouts/ltes/left_menu_search' %>
       <!-- 左侧菜单 导航-->
       <div>
         <div><%= render :partial => 'layouts/ltes/left_menu_navigation' %></div>
@@ -90,7 +73,7 @@
     <div class="pull-right hidden-xs">
       <b>暗夜大豆芽</b>
     </div>
-    <strong>Copyright &copy; 2014-2015 <a href="#">暗夜的神话</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2013-2015 <a href="#">暗夜的神话</a>.</strong> All rights reserved.
   </footer>
   <!-- 右侧菜单 导航 -->
   <aside class="control-sidebar control-sidebar-dark">
