--- a/app/views/layouts/just_admin_sign.html.erb
+++ b/app/views/layouts/just_admin_sign.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : 'Doyoudo | 管理员' %></title>
+  <title><%= content_for?(:title) ? yield(:title) : 'Xuan | 轩' %></title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <%= stylesheet_link_tag 'LTE_admin/lte_admin', media: 'all', 'data-turbolinks-track' => true %>
