--- a/app/views/administer/columns/index.html.erb
+++ b/app/views/administer/columns/index.html.erb
@@ -40,7 +40,7 @@
                       <%= channel.english %>
                     </label><br><br>
                     <label class="label label-primary" style="font-size: 16px">
-                      <i class="glyphicon glyphicon-pushpin"></i>
+                      <i class="fa <%= channel.icon %>"></i>
                       <%= channel.name %>
                     </label><br><br>
                     <label class="label label-default" style="font-size: 16px" title="更新于「<%= channel.updated_at.strftime('%Y-%m-%d %H:%M:%S') %>」">
