--- a/app/views/layouts/just_admin.html.erb
+++ b/app/views/layouts/just_admin.html.erb
@@ -21,7 +21,7 @@
   </style>
 </head>
 
-<body id="body-skin" class="<% if current_admin %>sidebar-mini wysihtml5-supported skin-black-light<% else %><%= user_style current_user %><% end %>">
+<body id="body-skin" class="sidebar-mini wysihtml5-supported skin-blue">
 <div class="wrapper">
 
   <header class="main-header">
