轮播首页头图修改

--- a/app/views/shared/_carousel_picture.html.erb
+++ b/app/views/shared/_carousel_picture.html.erb
@@ -6,7 +6,7 @@
             <% columns.each do |column|%>
                 <% if column.updated_at == columns.first.updated_at%>
                     <li data-delay="5" data-src="5" data-trans3d="tr6,tr17,tr22,tr23,tr29,tr27,tr32,tr34,tr35,tr53,tr54,tr62,tr63,tr4,tr13,tr45" data-trans2d="tr3,tr8,tr12,tr19,tr22,tr25,tr27,tr29,tr31,tr34,tr35,tr38,tr39,tr41">
-                      <img src="<%= image_path('slider/blank.png') %>" data-src="<%= column.cover %>" data-thumb="<%= image_path('toutu/just_logo.png') %>"/>
+                      <img src="<%= column.cover %>" data-src="<%= column.cover %>" data-thumb="<%= image_path('toutu/just_logo.png') %>"/>
                       <a data-type="link" href="" target="_blank"></a>
                     </li>
                 <% else %>
