栏目，视频播放，视频相关推荐

--- a/app/assets/stylesheets/just_front.scss
+++ b/app/assets/stylesheets/just_front.scss
@@ -2519,10 +2519,10 @@ ul.video-list li.video-item .animated:hover .video-info {
 }
 
 .header--logo__36kr {
-  width: 260px;
-  height: 60px;
-  background: asset_url('krtv-logo.png') no-repeat;
-  background-size: 260px 60px;
+  width: 154px;
+  height: 127px;
+  background: asset_url('toutu/just_logo.png') no-repeat;
+  background-size: 154px 127px;
   text-indent: -9999em;
   display: inline-block;
   margin-bottom: 10px;
