--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,16 +8,16 @@
     <div class="footer-subscribe">
       <h3>反馈 <font style="font-size: 20px"> | </font> 让你我共同进步</h3>
       <ul>
-        <li style="font-size: 18px"><a href="https://twitter.com/JustingOoO" target="_blank">Twitter</a></li>
-        <li style="font-size: 18px"><a href="mailto:huaxuan21475@gmail.com" target="_blank">Google</a></li>
-        <li><a href="http://dx.pc6.com/lei/liuxing9.07.zip"  target="_blank">流星客户端下载</a></li>
+        <li style="font-size: 18px"><a href="mailto:huaxuan21475@gmail.com" target="_blank"><img src="<%= image_path('toutu/google.png')%>" width="150px"></a></li>
+        <li><a href="http://dx.pc6.com/lei/liuxing9.07.zip"  target="_blank"><img src="<%= image_path('toutu/meteor.png')%>" width="150px"></a></li>
       </ul>
     </div>
     <div class="footer-partner">
       <h3>友情连接 <font style="font-size: 20px"> | </font> 分享创造快乐</h3>
       <ul>
-        <li style="font-size: 18px"><a href="http://techer.info?from=huaxuan.link" target="_blank">Chad_lwm</a></li>
-        <li style="font-size: 18px"><a href="http://ginchenorlee.com?from=huaxuan.link" target="_blank">Gin_chenor_lee</a></li>
+        <li style="font-size: 18px"><a href="/feed" target="_blank">Feed</a></li>
+        <li style="font-size: 18px"><a href="http://techer.info" target="_blank">Chad</a></li>
+        <li style="font-size: 18px"><a href="http://anjingdenaobu.com" target="_blank">安静的脑补</a></li>
       </ul>
     </div>
     <div class="footer-copyright">
