--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,9 +1,9 @@
-<%= content_for(:title, symbol_truncate(@video['title']) + ' | 轩') %>
+<%= content_for(:title, symbol_truncate(@video['title']) + ' | 华轩·张') %>
 <div class="container">
   <div class="grid">
     <div class="display">
       <div class="player-title">
-        「临时播放」<%= symbol_truncate @video['title'] %>
+        「优酷视频」<%= symbol_truncate @video['title'] %>
       </div>
       <div class="player-poster">
         <p><%= video_time @video['duration'] %>
