--- a/app/views/shared/_user_login.html.erb
+++ b/app/views/shared/_user_login.html.erb
@@ -1,4 +1,4 @@
-<section  id="login_form" class="wrapper" style="display: none; cursor: default;">
+<section  id="login_form" class="wrapper" style="display: none;">
   <div class="card">
     <div class="front">
       <header class="header">
@@ -9,13 +9,13 @@
           <p class="header--logo__slogan">一个邮箱，玩转所有</p>
         </div>
         <div class="header-help">
-          <a href="javascript:$.unblockUI()" style="position: absolute;top: 10px;right: 10px;"><img src="<%= image_url('close.png')%>" width="40px" height="40px"></a>
+          <a href="javascript:$.unblockUI()" style="position: absolute;top: 10px;right: 10px;"><img src="<%= image_url('toutu/close.png')%>" width="40px" height="40px"></a>
         </div>
-        <p id="tip" style="color: #0069d6;"></p>
+        <p id="tip" style="color: #dd3b5a;"></p>
       </header>
       <div class="main">
         <div class="main-login">
-          <form accept-charset="UTF-8" action="/users/sign_in" class="simple_form new_user" id="new_user" method="post">
+          <form accept-charset="UTF-8" action="/sign_login" class="simple_form new_user" id="new_user" method="post">
             <div class="form-group">
               <input aria-required="true" autocomplete="off"  id="email" name="user[email]" required="required" type="text" placeholder="请建入注册邮箱"/>
               <input aria-required="true" autocomplete="off"  id="password" name="user[password]" placeholder="请键入登陆密码" required="required" type="password" />
@@ -25,11 +25,9 @@
           </form>
         </div>
       </div>
-      <br/><%= link_to '注册用户', sign_up_path %>
     </div>
   </div>
 </section>
-<%= link_to '注册用户', sign_up_path %><br />
 <script>
     $('#user_login').click(function(){
         $.blockUI({ message: $('#login_form') });
