播放器 key 更改

--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -20,7 +20,7 @@
 </div>
 <script type="text/javascript" >
     var ivaInstance = new Iva('playerCnt', {
-        appkey: 'EkF-n6aZY',
+        appkey: '<%= Settings.videojj %>',
         title: '<%= symbol_truncate(@video['title']) %>',
         video: 'http://v.youku.com/v_show/id_<%= @video['id'] %>.html',
         cover: '<%= Settings.qiniu_cdn_host %>img_video_poster.png',
