文件管理及前端样式修改

--- a/app/assets/stylesheets/just_front.scss
+++ b/app/assets/stylesheets/just_front.scss
@@ -663,7 +663,7 @@ tr.collapse.in {
   clear: both;
   font-weight: normal;
   line-height: 1.428571429;
-  color: #333333;
+  color: #dd3b5a;
   white-space: nowrap;
 }
 
@@ -1285,7 +1285,8 @@ tr.collapse.in {
   color: #777777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #dd3b5a;
+  //color: #dd3b5a;
+  color: #0089db;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
   color: #333333;
