--- a/app/views/shared/_user_login.html.erb
+++ b/app/views/shared/_user_login.html.erb
@@ -20,7 +20,7 @@
               <input aria-required="true" autocomplete="off"  id="email" name="user[email]" required="required" type="text" placeholder="请建入注册邮箱"/>
               <input aria-required="true" autocomplete="off"  id="password" name="user[password]" placeholder="请键入登陆密码" required="required" type="password" />
               <input type="hidden" name="back_url" value="<%= request.url %>">
-              <button type="submit" style="padding: 0 0;border: hidden"><img src="<%= image_path('avatar/submit.png') %>"></button>
+              <button type="submit" style="padding: 0 0;border: hidden"><img src="<%= image_path('avatar/submit.png') %>" style="width: 300px"></button>
             </div>
           </form>
         </div>
