--- a/app/views/welcome/channel.html.erb
+++ b/app/views/welcome/channel.html.erb
@@ -8,10 +8,10 @@
       </div>
       <div class="programa-list">
         <ul>
-          <li><a href="/">首页</a></li>
+          <li><a href="/"><i class="fa fa-home"></i>&nbsp;&nbsp;首页</a></li>
           <% Column.hexie.each do |channel| %>
               <li <% if params[:english].present? && params[:english] == channel.english%> class="active" <% end %>>
-                <a href="<%= video_channel_path(channel.english) %>"> <%= channel.name %></a>
+                <a href="<%= video_channel_path(channel.english) %>"><i class="<%= channel.icon %>"></i>&nbsp;&nbsp;<%= channel.name %></a>
               </li>
           <% end %>
         </ul>
