--- a/app/views/welcome/interim.html.erb
+++ b/app/views/welcome/interim.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.css' %>
+<%= javascript_include_tag 'http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.js' %>
 <%= content_for(:title, symbol_truncate(@video['title']) + ' | 华轩·张') %>
 <div class="container">
   <div class="grid">
@@ -20,7 +22,7 @@
 </div>
 <script type="text/javascript" >
     var ivaInstance = new Iva('playerCnt', {
-        appkey: '<%= Settings.videojj %>',
+        appkey: 'N1PBDCjXl',
         title: '<%= symbol_truncate(@video['title']) %>',
         video: 'http://v.youku.com/v_show/id_<%= @video['id'] %>.html',
         cover: '<%= Settings.qiniu_cdn_host %>img_video_poster.png',
