--- a/app/views/layouts/just_front_sign.html.erb
+++ b/app/views/layouts/just_front_sign.html.erb
@@ -27,7 +27,7 @@
       <header class="header">
         <div class="header-logo">
           <a href="/"><h1 class="header--logo__36kr"></h1></a>
-          <p class="header--logo__slogan">只需要一个邮箱，即可享受尊贵体验</p>
+          <p id="tip" class="header--logo__slogan">只需要一个邮箱，即可享受尊贵体验</p>
         </div>
         <div class="header-help">
           <a href="/" class="header-help__btn">帮助</a>
